# app/blueprints/mechanics/routes.py
@@ -60,7 +60,7 @@ def update_mechanic(mechanic_id):
     return jsonify(e.messages),400
   
   for key,value in mechanic_data.items():
-    setattr(Mechanic,key,value)
+    setattr(mechanic,key,value)
 
   db.session.commit()
   return mechanic_schema.jsonify(mechanic),200
